--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,14 @@
 -------------------------------------
+	4.1-9	2012-09-04
+-------------------------------------
+Made Hardware Virtualization options dependencies more apparent.
+http://code.google.com/p/phpvirtualbox/issues/detail?id=574
+
+Fixed bug in New Virtual Machine Wizard that would not allow
+one to continue after creating a new hard disk.
+http://code.google.com/p/phpvirtualbox/issues/detail?id=575
+
+-------------------------------------
 	4.1-8	2012-08-20
 -------------------------------------
 Fixed bug that would error out when creating a VM without a boot
