--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,4 +1,32 @@
 -------------------------------------
+	4.2-2	2012-10-15
+-------------------------------------
+Look-and-feel changes to more closely match the VirtualBox GUI
+
+Better UI handling of long group and VM names
+
+Fixed bug causing phpVirtualBox to not load in IE unless the
+JavaScript console was open
+
+Added config option to exclusively use phpVirtualBox's own groups
+configuration rather than VirtualBox groups - see
+config.php-example for more info
+
+Fixed bug that would leave group information (vm / group counts
+and icons) always visible after renaming a group
+
+Improved redraw logic for VM data in the Details section / tab
+
+Improved chooser grouping logic when grouping multiple items
+
+GUI state information is now saved in browser's localStorage
+instead of using cookies
+http://www.w3schools.com/html/html5_webstorage.asp
+
+Collapsed state of groups is now remembered if the browser
+supports localStorage
+
+-------------------------------------
 	4.2-1	2012-10-09
 -------------------------------------
 VirtualBox 4.2.x compatibility release
